update demo create

--- a/templates/demo/demo_detail.html
+++ b/templates/demo/demo_detail.html
@@ -7,12 +7,12 @@
         <div class="col-md-5">
             <div class="project-info-box mt-0">
                 <h5>{{ demo.subject }}</h5>
-                <p class="mb-0">{{ demo.content }}</p>
+                <p class="mb-0">{{ demo.content|mark }}</p>
             </div><!-- / project-info-box -->
 
             <div class="project-info-box">
                 <p><b>Author:</b> {{ demo.author }} </p>
-                <p><b>Create Date:</b> {{ demo.create_date}} </p>
+                <p><b>Create Date:</b> {{ demo.create_date }} </p>
             </div><!-- / project-info-box -->
 
             <div class="project-info-box mt-0 mb-0">
@@ -21,7 +21,9 @@
         </div><!-- / column -->
 
         <div class="col-md-7">
+            {% if demo.photo %}
             <img src="{{ demo.photo.url }}" alt="project-image" class="img-fluid">
+            {% endif %}
             <div class="project-info-box">
                 <p> <b>Task:</b> {{ demo.task }} </p>
                 <p> <b>Framework:</b> {{ demo.framework }} </p>
