--- a/templates/demo/demo_list.html
+++ b/templates/demo/demo_list.html
@@ -3,7 +3,7 @@
 <div class="container p-0">
 	<div class="row">
     {% for demo in demo_list %}
-    <div class="col-12 col-md-6 col-lg-3">
+    <div class="col-12 col-md-6 col-lg-3 mb-3">
         <div class="card">
             {% if demo.photo %}
             <img class="card-img-top" src="{{ demo.photo.url }}" alt="Unsplash">
@@ -47,5 +47,44 @@
         </div>
     </div>
     {% endfor %}
-</div>
+    </div>
+    
+    <!-- 페이징처리 시작 -->
+    <ul class="pagination justify-content-center">
+        <!-- 이전페이지 -->
+        {% if demo_list.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ demo_list.previous_page_number }}">이전</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+        </li>
+        {% endif %}
+        <!-- 페이지리스트 -->
+        {% for page_number in demo_list.paginator.page_range %}
+        {% if page_number >= demo_list.number|add:-2 and page_number <= demo_list.number|add:2 %}
+            {% if page_number == demo_list.number %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
+            {% endif %}
+        {% endif %}
+        {% endfor %}
+        <!-- 다음페이지 -->
+        {% if demo_list.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ demo_list.next_page_number }}">다음</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+        </li>
+        {% endif %}
+    </ul>
+    <!-- 페이징처리 끝 -->
 {% endblock %}
