--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,24 +1,32 @@
 <!-- 네비게이션바 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
-    <a class="navbar-brand" href="{% url 'demo:index' %}">Deep Demo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li> -->
-      </ul>
-      <a href="{% url 'demo:demo_create' %}" class="btn btn-dark my-2 my-sm-0">New Demo</a>
-      
-      {% if user.is_authenticated %}
-      <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+  <a class="navbar-brand" href="{% url 'demo:index' %}">Deep Demo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'board:index' %}">게시판</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      {% if not user.is_authenticated %}
+      <li class="nav-item">
+        <a href="{% url 'common:login' %}" class="btn btn-dark my-2 my-sm-0">로그인</a>
+      </li>
       {% else %}
-      <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{ user.username }}
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{% url 'demo:demo_create' %}">데모 올리기</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'common:logout' %}">로그아웃</a>
+        </div>
+      </li>
       {% endif %}
-    </div>
-  </nav>
+    </ul>
+  </div>
+</nav>
