--- a/templates/board/question_list.html
+++ b/templates/board/question_list.html
@@ -97,7 +97,7 @@
     <!-- 페이징처리 끝 -->
     <a href="{% url 'board:question_create' %}" class="btn btn-primary">질문 등록하기</a>
 </div>
-<form id="searchForm" method="get" action="{% url 'index' %}">
+<form id="searchForm" method="get" action="{% url 'board:index' %}">
     <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
     <input type="hidden" id="page" name="page" value="{{ page }}">
     <input type="hidden" id="so" name="so" value="{{ so }}">
