--- a/templates/demo/demo_form.html
+++ b/templates/demo/demo_form.html
@@ -32,6 +32,10 @@
                       id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
         </div>
         <div class="form-group">
+            <label for="task">Demo URL</label>
+            <p name="task" id="task">{{ form.url }}</p>
+        </div>
+        <div class="form-group">
             <label for="framework">Framework</label>
             <p name="framework" id="framework">{{ form.framework }}</p>
         </div>
