photo object remove for free heroku

--- a/templates/demo/demo_form.html
+++ b/templates/demo/demo_form.html
@@ -17,10 +17,10 @@
             </div>
         {% endif %}
         <!-- 오류표시 End -->
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="photo">사진</label>
             <input id="photo" type="file" class="" name="photo">
-        </div>
+        </div> -->
         <div class="form-group">
             <label for="subject">제목</label>
             <input type="text" class="form-control" name="subject" id="subject"
