--- a/templates/demo/demo_list.html
+++ b/templates/demo/demo_list.html
@@ -5,9 +5,9 @@
     {% for demo in demo_list %}
     <div class="col-12 col-md-6 col-lg-3 mb-3">
         <div class="card">
-            {% if demo.photo %}
+            <!-- {% if demo.photo %}
             <img class="card-img-top" src="{{ demo.photo.url }}" alt="Unsplash">
-            {% endif %}
+            {% endif %} -->
             <div class="card-header px-4 pt-4">
                 <div class="card-actions float-right">
                     <!-- <div class="dropdown show">
