--- a/templates/demo/demo_detail.html
+++ b/templates/demo/demo_detail.html
@@ -4,7 +4,7 @@
 <!-- Product section-->
 <div class="container">
     <div class="row">
-        <div class="col-md-5">
+        <div class="col">
             <div class="project-info-box mt-0">
                 <h5>{{ demo.subject }}</h5>
                 <p class="mb-0">{{ demo.content|mark }}</p>
@@ -15,6 +15,11 @@
                 <p><b>Create Date:</b> {{ demo.create_date }} </p>
             </div><!-- / project-info-box -->
 
+            <div class="project-info-box">
+                <p> <b>Task:</b> {{ demo.task }} </p>
+                <p> <b>Framework:</b> {{ demo.framework }} </p>
+            </div><!-- / project-info-box -->
+
             <div class="project-info-box mt-0 mb-0">
                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{ demo.url }}">Start Demo</a></div>
                 {% if request.user == demo.author %}
@@ -22,17 +27,13 @@
                     <a href="#" class="small delete"  data-uri="{% url 'demo:demo_delete' demo.id  %}">삭제</a>
                 {% endif %}
             </div><!-- / project-info-box -->
-        </div><!-- / column -->
+        </div>
 
-        <div class="col-md-7">
+        <!-- <div class="col-md-7">
             {% if demo.photo %}
             <img src="{{ demo.photo.url }}" alt="project-image" class="img-fluid">
             {% endif %}
-            <div class="project-info-box">
-                <p> <b>Task:</b> {{ demo.task }} </p>
-                <p> <b>Framework:</b> {{ demo.framework }} </p>
-            </div><!-- / project-info-box -->
-        </div><!-- / column -->
+        </div> -->
     </div>
 </div>
 {% endblock %}
